# fractals

./: .gitignore  .syntastic_cpp_config  CMakeLists.txt  build.info  ideas
data/: colors.json  colorscheme-row.glade  ui.glade
src/fractals/: main.cpp
src/fractals/color/: ColorScheme.cpp  ColorScheme.hpp  GradientColorScheme.cpp  GradientColorScheme.hpp  color_scheme.cpp  color_scheme.hpp  color_scheme_util.cpp  color_scheme_util.hpp
src/fractals/fractal/: Fractal.cpp  Fractal.hpp  Julia.cpp  Julia.hpp  Mandelbrot.cpp  Mandelbrot.hpp  fractal.cpp  fractal.hpp  fractal_util.cpp  fractal_util.hpp  julia.cpp  julia.hpp  mandelbrot.cpp  mandelbrot.hpp
src/fractals/ui/: Application.cpp  Application.hpp  ColorSchemeMenu.cpp  EventHandler.cpp  Menu.cpp  MenuUtils.hpp  SFMLWidget.cpp  SFMLWidget.hpp  ViewChanger.cpp  ViewChanger.hpp  ViewManager.cpp  ViewManager.hpp  application.cpp  application.hpp  color_scheme_editor.cpp  color_scheme_editor.hpp  color_scheme_menu.cpp  color_scheme_menu.hpp  dialog_fractal.cpp  dialog_fractal.hpp  dialog_load_save.cpp  dialog_load_save.hpp  dialog_save_image.cpp  dialog_save_image.hpp  event_handler.cpp  event_handler.hpp  fractal_widget.cpp  fractal_widget.hpp  fractal_widget_util.cpp  fractal_widget_util.hpp  gtkmm_nowarning.hpp  menu.cpp  menu.hpp  menu_utils.hpp  sfml_widget.cpp  sfml_widget.hpp  view_changer.cpp  view_changer.hpp  view_manager.cpp  view_manager.hpp
src/fractals/util/: Observer.hpp  Semaphore.cpp  Semaphore.hpp  Subject.hpp  ThreadWorker.cpp  ThreadWorker.hpp  View.cpp  View.hpp  builder_utils.cpp  builder_utils.hpp  event_handler.cpp  event_handler.hpp  observer.cpp  observer.hpp  parse_util.cpp  parse_util.hpp  raii_helpers.cpp  raii_helpers.hpp  sfml_widget.cpp  sfml_widget.hpp  subject.cpp  subject.hpp  thread_pool.cpp  thread_pool.hpp  view.cpp  view.hpp  view_util.cpp  view_util.hpp
test/: CMakeLists.txt  build.info  catalog.xml  example  example.glade
test/src/: main.cpp  sfml_widget.cpp  sfml_widget.hpp
